Bug 21116: Tiles layout broken

--- a/Web Apps/DMI.NET/DMI.NET/Content/DashboardStyles/layouts/tiles.css
+++ b/Web Apps/DMI.NET/DMI.NET/Content/DashboardStyles/layouts/tiles.css
@@ -93,7 +93,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f9ff', end
 	padding: 0px;
 }
 
-.tileContent {width: 3000px;}
+.tileContent {width: 4000px;}
 
 /*.ButtonLinkColumn {display: none;}
 					
